# ssh-tunnel-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING_AUTH_DIALOG.md  revision-comment
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  daemon_client.rs  error.rs  lib.rs  network.rs  profile_manager.rs  sse.rs  tls.rs  types.rs
crates/daemon/: Cargo.toml  build.rs  daemon.toml.example
crates/daemon/src/: api.rs  auth.rs  config.rs  known_hosts.rs  main.rs  monitor.rs  permissions.rs  pidfile.rs  security.rs  tls.rs  tunnel.rs
crates/gui/: Cargo.toml
crates/gui-core/: Cargo.toml
crates/gui-core/assets/: about.md  help.md
crates/gui-core/src/: daemon.rs  events.rs  lib.rs  profiles.rs  state.rs  view_models.rs
crates/gui-core/src/daemon/: client.rs  config.rs  mod.rs  sse.rs
crates/gui-gtk/: Cargo.toml
crates/gui-gtk/assets/: about.md
crates/gui-gtk/src/: main.rs
crates/gui-gtk/src/models/: mod.rs  profile_model.rs
crates/gui-gtk/src/ui/: about_dialog.rs  auth_dialog.rs  client_config.rs  config_wizard.rs  daemon_settings.rs  details.rs  event_handler.rs  help_dialog.rs  markdown.rs  mod.rs  navigation.rs  profile_details.rs  profile_dialog.rs  profiles_list.rs  sidebar.rs  style.css  window.rs
crates/gui-gtk/src/utils/: mod.rs  profiles.rs
crates/gui-qt/: Cargo.toml  README.md  build.rs
crates/gui-qt/qml/: ProfilesList.qml  main.qml
crates/gui-qt/src/: main.rs
crates/gui-qt/src/daemon/: mod.rs
crates/gui-qt/src/models/: mod.rs  profile_list.rs  profile_list_simple.rs
crates/gui-qt/src/ui/: mod.rs
crates/gui/src/: main.rs
crates/gui/src/daemon/: client.rs
crates/gui/src/ui/: auth_dialog.rs  client_config.rs  details.rs  help_dialog.rs  navigation.rs  profile_details.rs  profile_dialog.rs  profiles_list.rs  sidebar.rs  tunnel_handler.rs  window.rs
crates/tray/: Cargo.toml
crates/tray/src/: daemon_monitor.rs  dialogs.rs  main.rs  notifications.rs  state.rs  tray.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GUI_SSE_INTEGRATION.md  INSTALLATION.md  KNOWN_ISSUES.md  PROJECT_STATUS.md  QUICK_TEST_GUIDE.md  SECURITY.md  SHARED_SSE_FLOW.md  SYSTEMD.md  SYSTEM_REQUIREMENTS.md  TECHNICAL_REFERENCE.md  TESTING_AUTH_DIALOG.md  TESTING_PLAN.md
docs/releases/: v0.1.10.md  v0.1.8.md  v0.1.9.md
docs/systemd/: ssh-tunnel-daemon@.service
packaging/: README.md
packaging/appstream/: README.md  com.github.ssh-tunnel-manager.metainfo.xml
packaging/deb/: README.md
packaging/deb/debian/: README.md  control  copyright
packaging/desktop/: README.md  com.github.ssh-tunnel-manager.desktop
packaging/flatpak/: README.md
packaging/rpm/: ssh-tunnel-manager.spec
packaging/systemd/: ssh-tunnel-daemon.service  ssh-tunnel-daemon@.service
scripts/: install.sh  test-network-modes.sh
temp/ssh-tunnel-manager-0.1.7/: CHANGELOG.md  Cargo.toml  Makefile  README.md
temp/ssh-tunnel-manager-0.1.7/crates/cli/: Cargo.toml  cli.toml.example
temp/ssh-tunnel-manager-0.1.7/crates/cli/src/: config.rs  main.rs
temp/ssh-tunnel-manager-0.1.7/crates/common/: Cargo.toml
temp/ssh-tunnel-manager-0.1.7/crates/common/src/: daemon_client.rs  error.rs  keychain.rs  profile_manager.rs
temp/ssh-tunnel-manager-0.1.7/crates/daemon/: build.rs
temp/ssh-tunnel-manager-0.1.7/crates/daemon/src/: auth.rs  main.rs  monitor.rs  permissions.rs  pidfile.rs  security.rs
temp/ssh-tunnel-manager-0.1.7/crates/gui/assets/: help.md
temp/ssh-tunnel-manager-0.1.7/crates/gui/src/daemon/: client.rs  mod.rs  sse.rs
temp/ssh-tunnel-manager-0.1.7/crates/gui/src/ui/: auth_dialog.rs  daemon_settings.rs  mod.rs  style.rs
temp/ssh-tunnel-manager-0.1.7/crates/tray/src/: dialogs.rs  main.rs  notifications.rs  tray.rs
temp/ssh-tunnel-manager-0.1.7/docs/: APP_ICON.md  DAEMON_EVENT_ORDERING_FIX.md  KEY_PASSPHRASE_VALIDATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.txt  SHARED_SSE_FLOW.md  SSE_RACE_CONDITION_FIX.md  VERSION_MANAGEMENT.md
temp/ssh-tunnel-manager-0.1.7/docs/systemd/: ssh-tunnel-daemon.user.service  ssh-tunnel-daemon@.service
temp/ssh-tunnel-manager-0.1.7/packaging/appstream/: com.github.ssh-tunnel-manager.metainfo.xml
temp/ssh-tunnel-manager-0.1.7/packaging/deb/debian/: changelog  control  copyright  rules  ssh-tunnel-cli.install  ssh-tunnel-daemon.install  ssh-tunnel-gui.install
temp/ssh-tunnel-manager-0.1.7/packaging/flatpak/: com.github.ssh-tunnel-manager.yml
temp/ssh-tunnel-manager-0.1.7/packaging/rpm/: README.md  ssh-tunnel-manager.spec
temp/ssh-tunnel-manager-0.1.7/packaging/systemd/: README.md
