[workspace]
resolver = "2"
members = [
    "crates/daemon",
    "crates/cli",
    "crates/gui-gtk",
    "crates/gui-qt",
    "crates/gui-core",
    "crates/common",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
authors = ["SSH Tunnel Manager Contributors"]
license = "Apache-2.0"
repository = "https://github.com/SchirmForge/ssh-tunnel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# HTTP/REST API
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# SSH
russh = "0.45"
russh-keys = "0.45"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }
zeroize = { version = "1.8", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Config directories
dirs = "5.0"

# CLI (for CLI crate)
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# HTTP client (for CLI and GUI)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# GTK (for GUI crate)
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
ashpd = "0.12"

# System tray (for tray crate)
ksni = "0.2"
notify-rust = "4.11"

# WebSocket (for GUI crate)
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

#[patch.crates-io]
#libcrux-ml-kem = { git = "https://github.com/pq-code-package/rust-libcrux.git" }
#libcrux-ml-kem = { git = "https://github.com/pq-code-package/mlkem-rust-libcrux.git" }

