[package]
name = "ssh-tunnel-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime (for SSE event handling)
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID for profile IDs
uuid = { workspace = true }

# Security - zero on drop
zeroize = { workspace = true }

# Logging
tracing = { workspace = true }

# Config directories
dirs = { workspace = true }

# HTTP client (for daemon communication)
reqwest = { workspace = true }

# TLS (for client certificate pinning)
rustls = { version = "0.23", features = ["aws-lc-rs"] }
webpki-roots = "0.26"
sha2 = "0.10"
x509-parser = "0.16"
