[package]
name = "ssh-tunnel-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ssh-tunnel-daemon"
path = "src/main.rs"

[dependencies]
# Workspace crates
ssh-tunnel-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP/REST API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures = { version = "0.3" }

# SSH (russh)
# old version on crate: russh = { version = "0.54.6"}
# not needed anymore: russh-keys = { version = "0.49.2" }
# old version on crate: russh-util = "0.52.0"
russh = { git = "https://github.com/Eugeny/russh.git", branch = "main" }
russh-util = { git = "https://github.com/Eugeny/russh.git", branch = "main", package = "russh-util" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Security
secret-service = { workspace = true }
zeroize = { workspace = true }
keyring = "2.3"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"
x509-parser = "0.16"
tokio-rustls = "0.26"
sha2 = "0.10"
time = { version = "0.3", features = ["macros"] }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Config directories
dirs = { workspace = true }

# Async channels
async-trait = "0.1"

# System calls (for PID file management)
libc = "0.2"

# Base64 encoding (for known_hosts)
base64 = "0.22"

[dev-dependencies]
tempfile = "3.12"
