[package]
name = "ssh-tunnel-gui-core"
version = "0.1.9"
edition = "2021"
authors = ["SSH Tunnel Manager Contributors"]
license = "Apache-2.0"
description = "Framework-agnostic GUI core for SSH Tunnel Manager"
repository = "https://github.com/yourusername/ssh-tunnel-manager"

[dependencies]
ssh-tunnel-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
toml = "0.8"
eventsource-client = "0.13"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
dirs = "5"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
