[package]
name = "ssh-tunnel-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ssh-tunnel-gui"
path = "src/main.rs"

[dependencies]
# Workspace crates
ssh-tunnel-common = { path = "../common" }

# GTK and libadwaita (Phase 1: Basic UI only)
gtk4 = { workspace = true }
libadwaita = { workspace = true }
glib = "0.20"
gio = "0.20"

# Phase 2 dependencies:
# Serialization (for profile loading)
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config directories
dirs = { workspace = true }

# Date/Time (for profile timestamps)
chrono = { workspace = true }

# Phase 3 dependencies:
# UUID generation
uuid = { workspace = true }

# TOML serialization
toml = { workspace = true }

# Phase 4 dependencies (Daemon communication):
# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }
futures = "0.3"

# HTTP client for API calls
reqwest = { workspace = true }

# Additional serialization
serde_json = { workspace = true }

# Additional error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Markdown rendering
pulldown-cmark = "0.12"

# SSH key validation
russh-keys = { workspace = true }

# Shell expansion for tilde (~) in paths
shellexpand = "3.1"
