[package]
name = "ssh-tunnel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ssh-tunnel"
path = "src/main.rs"

[dependencies]
# Workspace crates
ssh-tunnel-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# CLI framework
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

# Table formatting
comfy-table = "7.1"

# HTTP client for API calls
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Config directories
dirs = { workspace = true }

# Path expansion for ~ in file paths
shellexpand = "3.1"

# SSH key validation
russh-keys = { workspace = true }

# for event handling
futures = { version = "0.3" }

# TLS certificate pinning - now provided by ssh-tunnel-common
